--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE</title>
+  <title>WEBO</title>
 </head>
 
 <body>
