--- a/pages/helper.html
+++ b/pages/helper.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 新手幫助</title>
+  <title>WEBO - 新手幫助</title>
 </head>
 
 <body>
