--- a/pages/order_established.html
+++ b/pages/order_established.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 訂單已成立</title>
+  <title>WEBO - 訂單已成立</title>
 </head>
 
 <body>
