--- a/pages/vip_level.html
+++ b/pages/vip_level.html
@@ -1,210 +1,219 @@
 <!doctype html>
 <html lang="zh-tw">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS -->
-    <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-    <title>HOMIE - 會員中心</title>
-  </head>
-  <body>
-      <!-- title -->
-      <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header custom-header-has-bg">
-        <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
-        <h2 class="fs-6 mb-0 text-center">
-          會員等級
-        </h2>
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- CSS -->
+  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <title>WEBO - 會員中心</title>
+</head>
+
+<body>
+  <!-- title -->
+  <div class="d-flex container-fluid justify-content-center text-black bg-white custom-header custom-header-has-bg">
+    <a class="back-icon" href="account.html"><img src="../assets/img/arrow_right_gray.svg" alt="arrow_right_white"></a>
+    <h2 class="fs-6 mb-0 text-center">
+      會員等級
+    </h2>
+  </div>
+  <!-- title end -->
+
+  <!-- vip info -->
+  <div class="vip-info-wrap mb-1"
+    style="background-color: transparent;height: 161px; box-shadow: none; background-position: bottom;background-size: cover;">
+    <div class="row mb-3 mx-1 mt-0" style="height: 45px;">
+      <div class="col-2 d-flex align-items-center pe-0">
+        <img class="rounded-pill" style="width:45px;height:45px" class="w-100" src="https://fakeimg.pl/45x45/" alt="">
       </div>
-      <!-- title end -->
-
-      <!-- vip info -->
-      <div class="vip-info-wrap mb-1" style="background-color: transparent;height: 161px; box-shadow: none; background-position: bottom;background-size: cover;">
-        <div class="row mb-3 mx-1 mt-0" style="height: 45px;">
-          <div class="col-2 d-flex align-items-center pe-0">
-            <img class="rounded-pill" style="width:45px;height:45px" class="w-100" src="https://fakeimg.pl/45x45/" alt="">
-          </div>
-          <a class="col-10 d-block d-flex flex-row align-items-center text-decoration-none px-0" href="account_detail.html">
-            <div class="me-auto d-flex flex-column justify-content-center">
-                <div>帳號名稱</div>
-            </div>
-            <img style="width:60px;height:60px" src="../assets/img/vip-level-1.png" alt="arrow_right_white">
-          </a>
+      <a class="col-10 d-block d-flex flex-row align-items-center text-decoration-none px-0" href="account_detail.html">
+        <div class="me-auto d-flex flex-column justify-content-center">
+          <div>帳號名稱</div>
         </div>
-        <div class="info-progress mt-3">
-          <div class="now-level">
-            <img class="mx-1" src="../assets/img/level-icon-1.svg" alt="" srcset="">
-          </div>
-          <div class="vip-progress-bar">
-            <!-- 這邊設定進度條％數 -->
-            <div class="progress-persent" style="width: 37%;"></div>
-          </div>
-          <div class="next-level">
-            <img class="mx-1" src="../assets/img/level-icon-2.svg" alt="" srcset="">
-          </div>
-        </div>
-        <div class="bet-info-wrap mb-0">
-          <div class="bet-header">
-            <div class="month-bet">本月投注金額 : 3243</div>
-            <div class="month-recharge">本月儲值金額 : 3003</div>
-          </div>
-        </div>
-        
-
+        <img style="width:60px;height:60px" src="../assets/img/vip-level-1.png" alt="arrow_right_white">
+      </a>
+    </div>
+    <div class="info-progress mt-3">
+      <div class="now-level">
+        <img class="mx-1" src="../assets/img/level-icon-1.svg" alt="" srcset="">
       </div>
-      <!-- vip info end -->
+      <div class="vip-progress-bar">
+        <!-- 這邊設定進度條％數 -->
+        <div class="progress-persent" style="width: 37%;"></div>
+      </div>
+      <div class="next-level">
+        <img class="mx-1" src="../assets/img/level-icon-2.svg" alt="" srcset="">
+      </div>
+    </div>
+    <div class="bet-info-wrap mb-0">
+      <div class="bet-header">
+        <div class="month-bet">本月投注金額 : 3243</div>
+        <div class="month-recharge">本月儲值金額 : 3003</div>
+      </div>
+    </div>
 
-      <!-- vip line & card -->
-      <div class="vip-progress-container">
-        <div class="vip-line-wrap">
-          <div class="vip-line-item active">Lv1</div>
-          <div class="vip-line-item">Lv2</div>
-          <div class="vip-line-item">Lv3</div>
-          <div class="vip-line-item">Lv4</div>
-          <div class="vip-line-item">Lv5</div>
+
+  </div>
+  <!-- vip info end -->
+
+  <!-- vip line & card -->
+  <div class="vip-progress-container">
+    <div class="vip-line-wrap">
+      <div class="vip-line-item active">Lv1</div>
+      <div class="vip-line-item">Lv2</div>
+      <div class="vip-line-item">Lv3</div>
+      <div class="vip-line-item">Lv4</div>
+      <div class="vip-line-item">Lv5</div>
+    </div>
+
+    <div class="vip-card-wrap">
+      <img src="../assets/img/vip-card-1.png" class="vip-card-item"></img>
+      <img src="../assets/img/vip-card-2.png" class="vip-card-item"></img>
+      <img src="../assets/img/vip-card-3.png" class="vip-card-item"></img>
+      <img src="../assets/img/vip-card-4.png" class="vip-card-item"></img>
+      <img src="../assets/img/vip-card-5.png" class="vip-card-item"></img>
+    </div>
+  </div>
+  <!-- vip line & card end -->
+
+  <div class="container">
+
+    <!-- vip 福利 -->
+    <div class="card w-100 mb-3 mt-4" style="width: 18rem;">
+      <div class="card-title">VIP1福利</div>
+      <div class="card-body pb-0 d-flex flex-wrap align-items-center justify-content-between">
+        <div class="vip-desc-item">
+          <img src="../assets/img/vip-upgrade-icon.svg" alt="">
+          <div class="vip-item-box">
+            <div class="back-num">--</div>
+            <div class="third">升級禮金<br /> &nbsp;</div>
+          </div>
         </div>
-
-        <div class="vip-card-wrap">
-          <img src="../assets/img/vip-card-1.png" class="vip-card-item"></img>
-          <img src="../assets/img/vip-card-2.png" class="vip-card-item"></img>
-          <img src="../assets/img/vip-card-3.png" class="vip-card-item"></img>
-          <img src="../assets/img/vip-card-4.png" class="vip-card-item"></img>
-          <img src="../assets/img/vip-card-5.png" class="vip-card-item"></img>
+        <div class="vip-desc-item">
+          <img src="../assets/img/vip-month-good.svg" alt="">
+          <div class="vip-item-box">
+            <div class="back-num">--</div>
+            <div class="third">每月福利<br /> &nbsp;</div>
+          </div>
+        </div>
+        <div class="vip-desc-item">
+          <img src="../assets/img/vip-free.svg" alt="">
+          <div class="vip-item-box">
+            <div class="back-num">1</div>
+            <div class="third">單週免手續<br />費出款次數</div>
+          </div>
         </div>
       </div>
-      <!-- vip line & card end -->
+    </div>
+    <!-- vip 福利 end -->
 
-      <div class="container">
-
-        <!-- vip 福利 -->
-        <div class="card w-100 mb-3 mt-4" style="width: 18rem;">
-          <div class="card-title">VIP1福利</div>
-            <div class="card-body pb-0 d-flex flex-wrap align-items-center justify-content-between">
-                <div class="vip-desc-item">
-                  <img src="../assets/img/vip-upgrade-icon.svg" alt="">
-                  <div class="vip-item-box">
-                    <div class="back-num">--</div>
-                    <div class="third">升級禮金<br /> &nbsp;</div>
-                  </div>
-                </div>
-                <div class="vip-desc-item">
-                  <img src="../assets/img/vip-month-good.svg" alt="">
-                  <div class="vip-item-box">
-                    <div class="back-num">--</div>
-                    <div class="third">每月福利<br /> &nbsp;</div>
-                  </div>
-                </div>
-                <div class="vip-desc-item">
-                  <img src="../assets/img/vip-free.svg" alt="">
-                  <div class="vip-item-box">
-                    <div class="back-num">1</div>
-                    <div class="third">單週免手續<br />費出款次數</div>
-                  </div>
-                </div>
-            </div>
-        </div>
-        <!-- vip 福利 end -->
-
-        <!-- vip 反水 -->
-        <div class="card w-100 mb-3 " style="width: 18rem;">
-          <div class="card-title">VIP1返水</div>
-            <div class="card-body pb-0 d-flex flex-wrap align-items-center justify-content-between">
-                <div class="vip-desc-item">
-                  <div class="vip-item-box">
-                    <div class="back-num">12.3<span>%</span></div>
-                    <div class="third">電子返水</div>
-                  </div>
-                </div>
-                <div class="vip-desc-item">
-                  <div class="vip-item-box">
-                    <div class="back-num">14.3<span>%</span></div>
-                    <div class="third">電競返水</div>
-                  </div>
-                </div>
-                <div class="vip-desc-item">
-                  <div class="vip-item-box">
-                    <div class="back-num">0.31<span>%</span></div>
-                    <div class="third">真人返水</div>
-                  </div>
-                </div>
-                <div class="vip-desc-item">
-                  <div class="vip-item-box">
-                    <div class="back-num">0.33<span>%</span></div>
-                    <div class="third">棋牌返水</div>
-                  </div>
-                </div>
-                <div class="vip-desc-item">
-                  <div class="vip-item-box">
-                    <div class="back-num">1.3<span>%</span></div>
-                    <div class="third">體育返水</div>
-                  </div>
-                </div>
-                <div class="vip-desc-item">
-                  <div class="vip-item-box">
-                    <div class="back-num">2.43<span>%</span></div>
-                    <div class="third">彩票返水</div>
-                  </div>
-                </div>
-            </div>
-        </div>
-        <!-- vip 反水 end -->
-
-        <!-- vip 說明 -->
-        <div class="vip-tips-wrap mb-5">
-          <div class="text-primary border-bottom fw-bold pb-2 mb-3">VIP說明</div>
-          <div class="text-primary  fw-bold pb-2 mb-2">威博大方送會員紅利(返水)</div>
-          <div class="fs-8" style="color:#717171">
-            1. 威博娛樂城公司 1-8 級由系統審核達到資格者更新為全自動化升降 <br /><br />
-            2. 系統會在凌晨3:00統計前一日洗碼,並在當日早上6:00發放前一日的會員紅利,會員可以到遊戲大廳手動領取 <br /><br />
-            3. 由於系統結算紅利為每日00:00~06:00 ,若要領取紅利,請避開此區間 <br /><br />
-            4. 會員紅利計算依升級當下過後開始計算洗碼之回饋，未升級前之洗碼量不允計算
-          </div>
-
-          <div class="fs-8 my-5" style="color:#816C4B">
-            ● 本活動計算限有效押碼，無風險投注及免傭投注皆不算入有效押碼。 <br /><br />
-            ● 會員紅利 洗碼量需要2倍 <br /><br />
-            ● 無風險投注包括（在百家樂同時投注莊家及閒家，輪盤、骰寶及其他相似投注法同時投注【黑、紅】，【單、雙】，【大、小】等）。 <br /><br />
-            ● 同一帳戶/家庭/電話號碼/儲值地點/銀行帳戶/相似或同一IP位置/共享電腦/網路環境，僅限申請一次，若查獲同一個IP鄰近多個用戶，則拒絕發放福利。 <br /><br />
-            ● 活動如有任何異動，本娛樂城有權在任何時間，修改、暫停或取消優惠活動。 <br /><br />
-            ● 本娛樂城有權單方面對會員行為作出嚴格監控，發現有任何違背，欺騙或利用規則與條款進行非法獲利的會員，有權終止會員登入，跟暫停使用本網站，和沒收點數的權利無需通知。
+    <!-- vip 反水 -->
+    <div class="card w-100 mb-3 " style="width: 18rem;">
+      <div class="card-title">VIP1返水</div>
+      <div class="card-body pb-0 d-flex flex-wrap align-items-center justify-content-between">
+        <div class="vip-desc-item">
+          <div class="vip-item-box">
+            <div class="back-num">12.3<span>%</span></div>
+            <div class="third">電子返水</div>
           </div>
         </div>
-        <br>
-        <!-- vip 說明 end -->
-
+        <div class="vip-desc-item">
+          <div class="vip-item-box">
+            <div class="back-num">14.3<span>%</span></div>
+            <div class="third">電競返水</div>
+          </div>
+        </div>
+        <div class="vip-desc-item">
+          <div class="vip-item-box">
+            <div class="back-num">0.31<span>%</span></div>
+            <div class="third">真人返水</div>
+          </div>
+        </div>
+        <div class="vip-desc-item">
+          <div class="vip-item-box">
+            <div class="back-num">0.33<span>%</span></div>
+            <div class="third">棋牌返水</div>
+          </div>
+        </div>
+        <div class="vip-desc-item">
+          <div class="vip-item-box">
+            <div class="back-num">1.3<span>%</span></div>
+            <div class="third">體育返水</div>
+          </div>
+        </div>
+        <div class="vip-desc-item">
+          <div class="vip-item-box">
+            <div class="back-num">2.43<span>%</span></div>
+            <div class="third">彩票返水</div>
+          </div>
+        </div>
       </div>
-      <!-- 下方功能列 -->
-      <nav class="navbar navbar-expand fixed-bottom bg-white ">
-        <div class="container-fluid px-4">
-          <div class="navbar-nav w-100 justify-content-between">
-            <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center" href="/">
-              <img src="/assets/img/home_icon.svg" alt="home_icon">
-              <span>首頁</span>
-            </a>
-            <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center active" href="/pages/promotions.html">
-              <img src="/assets/img/present_icon.svg" alt="present_icon">
-              <span>優惠</span>
-            </a>
-            <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center" href="/pages/contact.html">
-              <img src="/assets/img/help_icon.svg" alt="help_icon">
-              <span>客服</span>
-            </a>
-            <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center" href="add_value.html">
-              <img src="/assets/img/icon-recharge.svg" alt="help_icon">
-              <span>儲值</span>
-            </a>
-            <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center" href="#">
-              <img src="/assets/img/member-center-icon-active.svg" alt="account_icon">
-              <span>會員</span>
-            </a>
-          </div>
-        </div>
-      </nav>
-      <!-- 下方功能列 end-->
+    </div>
+    <!-- vip 反水 end -->
+
+    <!-- vip 說明 -->
+    <div class="vip-tips-wrap mb-5">
+      <div class="text-primary border-bottom fw-bold pb-2 mb-3">VIP說明</div>
+      <div class="text-primary  fw-bold pb-2 mb-2">威博大方送會員紅利(返水)</div>
+      <div class="fs-8" style="color:#717171">
+        1. 威博娛樂城公司 1-8 級由系統審核達到資格者更新為全自動化升降 <br /><br />
+        2. 系統會在凌晨3:00統計前一日洗碼,並在當日早上6:00發放前一日的會員紅利,會員可以到遊戲大廳手動領取 <br /><br />
+        3. 由於系統結算紅利為每日00:00~06:00 ,若要領取紅利,請避開此區間 <br /><br />
+        4. 會員紅利計算依升級當下過後開始計算洗碼之回饋，未升級前之洗碼量不允計算
+      </div>
+
+      <div class="fs-8 my-5" style="color:#816C4B">
+        ● 本活動計算限有效押碼，無風險投注及免傭投注皆不算入有效押碼。 <br /><br />
+        ● 會員紅利 洗碼量需要2倍 <br /><br />
+        ● 無風險投注包括（在百家樂同時投注莊家及閒家，輪盤、骰寶及其他相似投注法同時投注【黑、紅】，【單、雙】，【大、小】等）。 <br /><br />
+        ● 同一帳戶/家庭/電話號碼/儲值地點/銀行帳戶/相似或同一IP位置/共享電腦/網路環境，僅限申請一次，若查獲同一個IP鄰近多個用戶，則拒絕發放福利。 <br /><br />
+        ● 活動如有任何異動，本娛樂城有權在任何時間，修改、暫停或取消優惠活動。 <br /><br />
+        ● 本娛樂城有權單方面對會員行為作出嚴格監控，發現有任何違背，欺騙或利用規則與條款進行非法獲利的會員，有權終止會員登入，跟暫停使用本網站，和沒收點數的權利無需通知。
+      </div>
+    </div>
+    <br>
+    <!-- vip 說明 end -->
+
+  </div>
+  <!-- 下方功能列 -->
+  <nav class="navbar navbar-expand fixed-bottom bg-white ">
+    <div class="container-fluid px-4">
+      <div class="navbar-nav w-100 justify-content-between">
+        <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
+          href="/">
+          <img src="/assets/img/home_icon.svg" alt="home_icon">
+          <span>首頁</span>
+        </a>
+        <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center active"
+          href="/pages/promotions.html">
+          <img src="/assets/img/present_icon.svg" alt="present_icon">
+          <span>優惠</span>
+        </a>
+        <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
+          href="/pages/contact.html">
+          <img src="/assets/img/help_icon.svg" alt="help_icon">
+          <span>客服</span>
+        </a>
+        <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
+          href="add_value.html">
+          <img src="/assets/img/icon-recharge.svg" alt="help_icon">
+          <span>儲值</span>
+        </a>
+        <a class="nav-link px-2 py-1 text-decoration-none d-block d-flex flex-column justify-content-center align-items-center"
+          href="#">
+          <img src="/assets/img/member-center-icon-active.svg" alt="account_icon">
+          <span>會員</span>
+        </a>
+      </div>
+    </div>
+  </nav>
+  <!-- 下方功能列 end-->
 
 
 
-    <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-  </body>
+  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+</body>
+
 </html>
