--- a/pages/account.html
+++ b/pages/account.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 會員中心</title>
+  <title>WEBO - 會員中心</title>
 </head>
 
 <body>
