--- a/pages/add_value.html
+++ b/pages/add_value.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 儲值</title>
+  <title>WEBO - 儲值</title>
 </head>
 
 <body>
