--- a/pages/bank_account_add.html
+++ b/pages/bank_account_add.html
@@ -1,121 +1,137 @@
 <!doctype html>
 <html lang="zh-tw">
-  <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- CSS -->
-    <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-    <title>HOMIE - 新增個人帳戶</title>
-  </head>
-  <body>
-    <!-- title -->
-    <div class="title d-flex container-fluid bg-dark text-white">
-        <a class="col-4 d-block text-white text-decoration-none" href="bank_account.html"><img class="rotateY" src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
-        <div class="col-4 text-nowrap"><h2 class="fs-5 mb-0 text-center">新增個人帳戶</h2></div>
-    </div><!-- title end -->
-    <!-- 表單 -->
-    <div class="container">
-        <div class="card bg-secondary w-100 mb-2" style="width: 18rem;">
-            <div class="card-header position-relative py-2">
-                <img class="position-absolute top-50 start-0 translate-middle" src="../assets/img/title_decorate.svg" alt="title_decorate">
-                <div class="fw-bold ps-2">填寫銀行帳戶資訊</div>
-            </div>
-            <div class="card-body">
-                <form action="">
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label text-muted">銀行名稱<span class="text-danger"> *</span></label>
-                        <select class="form-select bg-dark py-2 px-3 form-select mb-3" aria-label=".form-select-lg example">
-                            <option selected>請選擇銀行</option>
-                            <option value="1">One</option>
-                            <option value="2">Two</option>
-                            <option value="3">Three</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="exampleFormControlInput1" class="form-label text-muted">分行名稱<span class="text-danger"> *</span></label>
-                        <div class="input-group has-validation">
-                            <input type="text" class="form-control bg-dark" id="inputPassword" placeholder="請輸入分行名稱" aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
-                            <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
-                        </div>
-                    </div>
-                    <div>
-                        <label for="exampleFormControlInput1" class="form-label text-muted">戶名<span class="text-danger"> *</span></label>
-                        <div class="input-group has-validation">
-                            <input type="text" class="form-control bg-dark is-invalid" id="inputPassword" placeholder="請輸入戶名" aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
-                            <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
-                        </div>
-                    </div>
-                </form>
-            </div>
-        </div>
-        <div class="card bg-secondary w-100">
-            <div class="card-header position-relative py-2">
-                <img class="position-absolute top-50 start-0 translate-middle" src="../assets/img/title_decorate.svg" alt="title_decorate">
-                <div class="fw-bold ps-2">請上傳存摺正面照片</div>
-            </div>
-            <div class="card-body">
-                <form runat="server">
-                    <label for="imgInp" class="form-label text-muted w-100">
-                        <div id="uploader" class="uploader d-flex flex-column justify-content-center align-items-center">
-                            <img src="../assets/img/upload.svg" alt="upload">
-                            <div>請點擊此處上傳圖片</div>
-                        </div>
-                        <input accept="image/*" type='file' id="imgInp" class="d-none">
-                        <img id="blah" class="w-100 d-none" src="#" alt="圖片上傳預覽" />
-                    </label>
-                </form>
-                <div class="text-muted fs-8 mt-2 d-flex flex-row">
-                    <div class="me-1"><img src="../assets/img/info_icon.svg" alt="info_icon"></div>
-                    <div>溫馨提示</div>
-                </div>
-            </div>
-        </div>
-        <div class="d-grid gap-2 my-3">
-            <button class="btn btn-primary fs-6" type="button" onclick="showToast('success', '新增帳戶成功!', 'liveToast')">送出</button>
-        </div>
-    </div><!-- 表單 end-->
+<head>
+  <!-- Required meta tags -->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Toast 訊息，根據需求使用-->
-    <div class="toast-container position-fixed top-0 end-0 pt-3 d-flex flex-column justify-content-center align-items-center w-100">
-        <div id="liveToast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
-            <div class="d-flex">
-            <div class="toast-body d-flex flex-row align-items-center">
-                <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img src="../assets/img/info.svg" alt="info"></div>
-                <div class="msg ms-2 fw-bold">新增成功!</div>
-            </div>
-            <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
-            </div>
-        </div>
+  <!-- CSS -->
+  <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
+  <title>WEBO - 新增個人帳戶</title>
+</head>
+
+<body>
+  <!-- title -->
+  <div class="title d-flex container-fluid bg-dark text-white">
+    <a class="col-4 d-block text-white text-decoration-none" href="bank_account.html"><img class="rotateY"
+        src="../assets/img/arrow_right_white.svg" alt="arrow_right_white"></a>
+    <div class="col-4 text-nowrap">
+      <h2 class="fs-5 mb-0 text-center">新增個人帳戶</h2>
     </div>
-    <!-- Toast 訊息，根據需求使用 end-->
-    <div class="mb-2"></div>
+  </div><!-- title end -->
+  <!-- 表單 -->
+  <div class="container">
+    <div class="card bg-secondary w-100 mb-2" style="width: 18rem;">
+      <div class="card-header position-relative py-2">
+        <img class="position-absolute top-50 start-0 translate-middle" src="../assets/img/title_decorate.svg"
+          alt="title_decorate">
+        <div class="fw-bold ps-2">填寫銀行帳戶資訊</div>
+      </div>
+      <div class="card-body">
+        <form action="">
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label text-muted">銀行名稱<span class="text-danger">
+                *</span></label>
+            <select class="form-select bg-dark py-2 px-3 form-select mb-3" aria-label=".form-select-lg example">
+              <option selected>請選擇銀行</option>
+              <option value="1">One</option>
+              <option value="2">Two</option>
+              <option value="3">Three</option>
+            </select>
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlInput1" class="form-label text-muted">分行名稱<span class="text-danger">
+                *</span></label>
+            <div class="input-group has-validation">
+              <input type="text" class="form-control bg-dark" id="inputPassword" placeholder="請輸入分行名稱"
+                aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
+              <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
+            </div>
+          </div>
+          <div>
+            <label for="exampleFormControlInput1" class="form-label text-muted">戶名<span class="text-danger">
+                *</span></label>
+            <div class="input-group has-validation">
+              <input type="text" class="form-control bg-dark is-invalid" id="inputPassword" placeholder="請輸入戶名"
+                aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
+              <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+    <div class="card bg-secondary w-100">
+      <div class="card-header position-relative py-2">
+        <img class="position-absolute top-50 start-0 translate-middle" src="../assets/img/title_decorate.svg"
+          alt="title_decorate">
+        <div class="fw-bold ps-2">請上傳存摺正面照片</div>
+      </div>
+      <div class="card-body">
+        <form runat="server">
+          <label for="imgInp" class="form-label text-muted w-100">
+            <div id="uploader" class="uploader d-flex flex-column justify-content-center align-items-center">
+              <img src="../assets/img/upload.svg" alt="upload">
+              <div>請點擊此處上傳圖片</div>
+            </div>
+            <input accept="image/*" type='file' id="imgInp" class="d-none">
+            <img id="blah" class="w-100 d-none" src="#" alt="圖片上傳預覽" />
+          </label>
+        </form>
+        <div class="text-muted fs-8 mt-2 d-flex flex-row">
+          <div class="me-1"><img src="../assets/img/info_icon.svg" alt="info_icon"></div>
+          <div>溫馨提示</div>
+        </div>
+      </div>
+    </div>
+    <div class="d-grid gap-2 my-3">
+      <button class="btn btn-primary fs-6" type="button"
+        onclick="showToast('success', '新增帳戶成功!', 'liveToast')">送出</button>
+    </div>
+  </div><!-- 表單 end-->
 
-      <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
-      <script>
-        //#region 圖片上傳預覽
-        imgInp.onchange = evt => {
-            const [file] = imgInp.files
-            if (file) {
-                blah.src = URL.createObjectURL(file)
-                document.getElementById('blah').classList.remove('d-none')
-                document.getElementById('uploader').classList.add('d-none')
-            }
-        }
-        //#endregion 圖片上傳預覽
+  <!-- Toast 訊息，根據需求使用-->
+  <div
+    class="toast-container position-fixed top-0 end-0 pt-3 d-flex flex-column justify-content-center align-items-center w-100">
+    <div id="liveToast" class="toast align-items-center" role="alert" aria-live="assertive" aria-atomic="true">
+      <div class="d-flex">
+        <div class="toast-body d-flex flex-row align-items-center">
+          <div class="rounded-circle info-circle d-flex align-items-center justify-content-center"><img
+              src="../assets/img/info.svg" alt="info"></div>
+          <div class="msg ms-2 fw-bold">新增成功!</div>
+        </div>
+        <button type="button" class="btn-close me-2 m-auto" data-bs-dismiss="toast" aria-label="Close"></button>
+      </div>
+    </div>
+  </div>
+  <!-- Toast 訊息，根據需求使用 end-->
+  <div class="mb-2"></div>
 
-        //#region Toast 提示
-        function showToast (classStyle, info, toastId) {
-          var toastLiveExample = document.getElementById(toastId)
-          var toastIcon = document.querySelector(`#${toastId} .info-circle`)
-          toastIcon.classList.add(`bg-${classStyle}`)
-          var toastMsg = document.querySelector(`#${toastId} .msg`);
-          toastMsg.textContent = info;
-          var toast = new bootstrap.Toast(toastLiveExample)
-          toast.show()
-        }
+  <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
+  <script>
+    //#region 圖片上傳預覽
+    imgInp.onchange = evt => {
+      const [file] = imgInp.files
+      if (file) {
+        blah.src = URL.createObjectURL(file)
+        document.getElementById('blah').classList.remove('d-none')
+        document.getElementById('uploader').classList.add('d-none')
+      }
+    }
+    //#endregion 圖片上傳預覽
+
+    //#region Toast 提示
+    function showToast(classStyle, info, toastId) {
+      var toastLiveExample = document.getElementById(toastId)
+      var toastIcon = document.querySelector(`#${toastId} .info-circle`)
+      toastIcon.classList.add(`bg-${classStyle}`)
+      var toastMsg = document.querySelector(`#${toastId} .msg`);
+      toastMsg.textContent = info;
+      var toast = new bootstrap.Toast(toastLiveExample)
+      toast.show()
+    }
         //#endregion Toast 提示
-      </script>
-  </body>
+  </script>
+</body>
+
 </html>
