--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -10,7 +10,7 @@
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
   <link rel="stylesheet" type="text/css" href="../mobile-select-master/css/mobileSelect.css" />
   <script src="../mobile-select-master/js/mobileSelect.js" type="text/javascript"></script>
-  <title>HOMIE - 消息反饋</title>
+  <title>WEBO - 消息反饋</title>
 </head>
 
 <body>
