--- a/pages/game_record_detail.html
+++ b/pages/game_record_detail.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 遊戲記錄明細</title>
+  <title>WEBO - 遊戲記錄明細</title>
 </head>
 
 <body>
