--- a/pages/info_detail.html
+++ b/pages/info_detail.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 訊息詳情</title>
+  <title>WEBO - 訊息詳情</title>
 </head>
 
 <body>
