--- a/pages/privacy_policy.html
+++ b/pages/privacy_policy.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 隱私及政策</title>
+  <title>WEBO - 隱私及政策</title>
 </head>
 
 <body>
