--- a/pages/reason_bet.html
+++ b/pages/reason_bet.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 理性博彩</title>
+  <title>WEBO - 理性博彩</title>
 </head>
 
 <body>
