--- a/pages/rule.html
+++ b/pages/rule.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 規則與條款</title>
+  <title>WEBO - 規則與條款</title>
 </head>
 
 <body>
