--- a/pages/transe_history.html
+++ b/pages/transe_history.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>HOMIE - 優惠紀錄</title>
+  <title>WEBO - 優惠紀錄</title>
 </head>
 
 <body>
