perf: account page

--- a/pages/account.html
+++ b/pages/account.html
@@ -26,7 +26,7 @@
 
   <div class="">
     <!-- VIP Level & 帳號 -->
-    <div class="row mb-4 mx-1 mt-2" style="height: 60px;">
+    <div class="row mb-4 mx-1 bg-white" style="height: 60px;">
       <div class="col-3">
         <img class="rounded-pill" style="width:60px;height:60px" class="w-100" src="https://fakeimg.pl/60x60/" alt="">
       </div>
@@ -89,27 +89,27 @@
         </div>
       </div>
 
-      <div class="pb-2 mb-2 actions-btns-wrap">
+      <div class="pb-2 mb-3 actions-btns-wrap">
         <div class="row mx-2">
           <a class="d-block col-3 d-flex flex-column align-items-center text-secondary text-decoration-none"
             href="add_value.html">
             <div><img class="w-100" src="../assets/img/recharge_icon.svg" alt=""></div>
-            <div class="fs-7 text-nowrap btn-txt">儲值</div>
+            <div class="text-nowrap btn-txt">儲值</div>
           </a>
           <a class="d-block col-3 d-flex flex-column align-items-center text-secondary text-decoration-none"
             href="auction.html">
             <div><img class="w-100" src="../assets/img/auction_icon.svg" alt=""></div>
-            <div class="fs-7 text-nowrap btn-txt">提款</div>
+            <div class="text-nowrap btn-txt">提款</div>
           </a>
           <a class="d-block col-3 d-flex flex-column align-items-center text-secondary text-decoration-none"
             href="transe_point.html">
             <div><img class="w-100" src="../assets/img/trans_icon.svg" alt=""></div>
-            <div class="fs-7 text-nowrap btn-txt">轉點</div>
+            <div class="text-nowrap btn-txt">轉點</div>
           </a>
           <a class="d-block col-3 d-flex flex-column align-items-center text-secondary text-decoration-none"
             href="bank_account.html">
             <div><img class="w-100" src="../assets/img/wallet_icon.svg" alt="wallet"></div>
-            <div class="fs-7 text-nowrap btn-txt">帳戶管理</div>
+            <div class="text-nowrap btn-txt">帳戶管理</div>
           </a>
         </div>
       </div>
@@ -195,6 +195,11 @@
           </a>
         </ul>
       </div>
+    </div>
+
+    <div class="d-grid gap-2 mt-3 container">
+      <button class="btn btn-outline-primary fs-6 " type="button" data-bs-toggle="modal"
+        data-bs-target="#checkEdit">登出</button>
     </div>
 
 
