--- a/pages/password_edit.html
+++ b/pages/password_edit.html
@@ -8,7 +8,7 @@
 
   <!-- CSS -->
   <link href="../assets/css/all.css" rel="stylesheet" type="text/css">
-  <title>WEBO - 會員密碼修改</title>
+  <title>WEBO - 密碼修改</title>
 </head>
 
 <body>
@@ -17,7 +17,7 @@
     <a class="back-icon" href="account_detail.html"><img src="../assets/img/arrow_right_gray.svg"
         alt="arrow_right_white"></a>
     <h2 class="fs-6 mb-0 text-center">
-      會員密碼修改
+      密碼修改
     </h2>
   </div>
   <!-- title end -->
@@ -29,12 +29,12 @@
           <label for="inputAccount" class="form-label">舊密碼<span>*</span></label>
           <div class="input-group has-validation">
             <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
-            <input type="password" class="form-control is-invalid" id="signUp_inputPassword_check" placeholder="請輸入舊密碼"
+            <input type="password" class="form-control " id="signUp_inputPassword_check" placeholder="請輸入舊密碼"
               aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
             <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
           </div>
           <!-- 錯誤加上 is-invalid 無錯誤移除 is-invalid-->
-          <div class="checkEye is-invalid" onclick="showPassword('signUp_inputPassword_check')">
+          <div class="checkEye " onclick="showPassword('signUp_inputPassword_check')">
             <img class="eyeOpen signUp_inputPassword_check" src="/assets/img/eye_show.svg" alt="eye_open">
             <img class="eyeClose signUp_inputPassword_check d-none" src="/assets/img/eye_hide.svg" alt="eye_close">
           </div>
