perf: identify verify page

--- a/pages/feedback.html
+++ b/pages/feedback.html
@@ -78,10 +78,10 @@
       <div class="card-body">
         <form runat="server" class="d-flex">
           <label for="imgInp" class="form-label text-muted w-100 position-relative me-2">
-            <div class="mb-2" style="color: #959595;">文件格式為jpg、png、jpeg，且大小不超過15MB<span class="text-danger"> *</span>
+            <div class="mb-2" style="color: #959595;">文件格式為jpg、png、jpeg，且大小不超過15MB<span class="text-danger">*</span>
             </div>
             <div id="uploader"
-              class="border-3 uploader d-flex flex-column justify-content-center align-items-center bg-transparent">
+              class="uploader d-flex flex-column justify-content-center align-items-center bg-transparent">
               <img src="../assets/img/upload.svg" alt="upload">
               <div>請點擊此處上傳</div>
             </div>
