--- a/pages/bank_account.html
+++ b/pages/bank_account.html
@@ -54,12 +54,14 @@
       <div class="card-body">
         <form action="">
           <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-label">銀行名稱<span class="text-danger">*</span></label>
-            <div class="input-group has-validation">
-              <input readonly id="Bank" type="text" class="form-control" placeholder="請選擇銀行"
+            <label for="exampleFormControlInput1" class="form-label">銀行名稱 <span class="text-danger">*</span></label>
+            <div class="input-group has-validation" data-bs-toggle="offcanvas" data-bs-target="#offcanvasBottom"
+              aria-controls="offcanvasBottom">
+              <input type="text" class="form-control rounded-3 is-invalid" id="inputQutionType" placeholder="請選擇銀行名稱"
                 aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
+              <img class="d-block" src="../assets/img/arrow-right.svg" alt=""
+                style="position: absolute;right: 8px;top: 15px;z-index: 9;">
               <div id="validationServerPasswordFeedback2" class="invalid-feedback">錯誤</div>
-              </input>
             </div>
           </div>
           <div class="mb-3">
@@ -84,46 +86,52 @@
 
   <script src="../bootstrap5/dist/js/bootstrap.bundle.min.js" crossorigin="anonymous"></script>
   <!-- 銀行下拉 -->
+  <!-- offcanvas -->
+  <div class="offcanvas offcanvas-bottom rounded-top-lg border-0" tabindex="-1" id="offcanvasBottom"
+    aria-labelledby="offcanvasBottomLabel">
+    <div class="pt-2 pb-3 w-100" data-bs-dismiss="offcanvas" aria-label="Close">
+      <div class="m-auto div-close text-reset"></div>
+    </div>
+    <div class="offcanvas-body pt-0 small">
+      <div class="d-flex flex-column" role="group" aria-label="Basic radio toggle button group">
+        <div class="canvas-option">
+          <input type="radio" class="btn-check" name="btnradio" id="btnradio1" autocomplete="off" checked>
+          <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio1">
+            <div class="me-2">中信</div>
+            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+          </label>
+        </div>
+        <div class="canvas-option">
+          <input type="radio" class="btn-check" name="btnradio" id="btnradio2" autocomplete="off">
+          <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio2">
+            <div class="me-auto">國泰</div>
+            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+          </label>
+        </div>
+        <div class="canvas-option">
+          <input type="radio" class="btn-check" name="btnradio" id="btnradio3" autocomplete="off">
+          <label class="radio-icon-check d-flex justify-content-between align-items-center py-2" for="btnradio3">
+            <div>台銀</div>
+            <div class="py-auto"><img src="../assets/img/checked.svg" alt="checked"></div>
+          </label>
+        </div>
+      </div>
+    </div>
+  </div>
+  <!-- offcanvasBottom -->
   <script type="text/javascript">
-    var mobileSelect1 = new MobileSelect({
-      trigger: "#Bank",
-      title: "請選擇銀行",
-      wheels: [
-        {
-          data: [
-            { id: "1", value: "台新" },
-            { id: "2", value: "國泰" },
-            { id: "3", value: "台銀" },
-            { id: "4", value: "開發" },
-            { id: "5", value: "元大" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-            { id: "6", value: "中信" },
-          ],
-        },
-      ],
-      ensureBtnText: '確認',
-      cancelBtnText: '取消',
-      position: [2], //Initialize positioning
-      callback: function (indexArr, data) {
-        console.log(indexArr, data); //Returns the selected json data
-        document.getElementById('Bank').value = data[0].value
-      },
-    });
+    let options = document.querySelectorAll('#offcanvasBottom .canvas-option')
+    const input = document.getElementById('inputQutionType')
+    options.forEach(el => {
+      const button = new bootstrap.Button(el)
+      el.addEventListener('click', function (e) {
+        // e.preventDefault()
+        e.stopPropagation()
+        input.value = el.childNodes[3].innerText
+
+      })
+
+    })
   </script>
 </body>
 
