perf: trans point page

--- a/pages/add_value.html
+++ b/pages/add_value.html
@@ -50,7 +50,7 @@
     <!-- 儲值金額 -->
     <div class="card w-100 mb-2 mt-2" style="width: 18rem;">
       <div class="card-title">儲值金額</div>
-      <div class="card-body">
+      <div class="card-body pb-2">
         <div class="input-group has-validation mt-2">
           <input type="text" class="form-control" id="inputValue" placeholder="請輸入儲值金額"
             aria-describedby="inputGroupPrepend3 validationServerPasswordFeedback2" required>
